--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
-    <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
+    <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script> -->
+    <!-- <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script> -->
 
     <!-- FHIR Client JS Library -->
     <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <!-- <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script> -->
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'fb7e725b-dde2-4ca8-a66a-edf333eea7f6',
